--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: AIOps
+title: Katacoda
 brief-intro: 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.katacoda.cn/" # the base hostname & protocol for your site
